[gd_scene load_steps=10 format=2]

[ext_resource path="res://White-square.jpg" type="Texture" id=1]
[ext_resource path="res://Scripts/player_controller.gd" type="Script" id=2]
[ext_resource path="res://Graphics/snowman-Shee2t.png" type="Texture" id=3]
[ext_resource path="res://Graphics/arrow.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 39, 108 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21.7687, 22.3623 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 144 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 128, 144 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.315, 0.31 )
z_index = 6
script = ExtResource( 2 )
_speed = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
modulate = Color( 0.12549, 0, 1, 1 )
scale = Vector2( 0.156522, 0.432432 )
texture = ExtResource( 1 )

[node name="Buttons" type="Node2D" parent="."]

[node name="Button_1" type="Area2D" parent="Buttons"]
position = Vector2( 325, 0 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buttons/Button_1"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Buttons/Button_1"]
visible = false
self_modulate = Color( 0.0784314, 0, 1, 1 )
scale = Vector2( 0.0975361, 0.0975361 )
texture = ExtResource( 1 )

[node name="arrow3" type="Sprite" parent="Buttons/Button_1"]
modulate = Color( 0.756863, 0.592157, 1, 1 )
position = Vector2( 7.27206, 5.04344 )
rotation = 1.5708
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 4 )

[node name="Button_2" type="Area2D" parent="Buttons"]
position = Vector2( 0, 324.526 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buttons/Button_2"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Buttons/Button_2"]
visible = false
self_modulate = Color( 0.0784314, 0, 1, 1 )
scale = Vector2( 0.0975361, 0.0975361 )
texture = ExtResource( 1 )

[node name="arrow3" type="Sprite" parent="Buttons/Button_2"]
modulate = Color( 0.756863, 0.592157, 1, 1 )
position = Vector2( -4.80534, 3.77332 )
rotation = 3.14159
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 4 )

[node name="Button_3" type="Area2D" parent="Buttons"]
position = Vector2( 0, -324.526 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buttons/Button_3"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Buttons/Button_3"]
visible = false
self_modulate = Color( 0.0784314, 0, 1, 1 )
scale = Vector2( 0.0975361, 0.0975361 )
texture = ExtResource( 1 )

[node name="arrow3" type="Sprite" parent="Buttons/Button_3"]
modulate = Color( 0.756863, 0.592157, 1, 1 )
position = Vector2( 3.2032, -0.295593 )
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 4 )

[node name="Button_4" type="Area2D" parent="Buttons"]
position = Vector2( -325, 0 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buttons/Button_4"]
shape = SubResource( 2 )

[node name="arrow3" type="Sprite" parent="Buttons/Button_4"]
modulate = Color( 0.756863, 0.592157, 1, 1 )
position = Vector2( -8.80963, -3.00818 )
rotation = -1.5708
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Buttons/Button_4"]
visible = false
self_modulate = Color( 0.0784314, 0, 1, 1 )
scale = Vector2( 0.0975361, 0.0975361 )
texture = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.50342, 17.3989 )
scale = Vector2( 2, 2 )
frames = SubResource( 5 )
frame = 1
playing = true

[connection signal="mouse_entered" from="Buttons/Button_1" to="." method="_on_Button_1_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Button_1" to="." method="_on_Button_1_mouse_exited"]
[connection signal="mouse_entered" from="Buttons/Button_2" to="." method="_on_Button_2_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Button_2" to="." method="_on_Button_2_mouse_exited"]
[connection signal="mouse_entered" from="Buttons/Button_3" to="." method="_on_Button_3_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Button_3" to="." method="_on_Button_3_mouse_exited"]
[connection signal="mouse_entered" from="Buttons/Button_4" to="." method="_on_Button_4_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Button_4" to="." method="_on_Button_4_mouse_exited"]
